--- a/app/src/interfaces/input-block-editor/editorjs-overrides.css
+++ b/app/src/interfaces/input-block-editor/editorjs-overrides.css
@@ -1,7 +1,7 @@
 .codex-editor {
 	--bg-color: var(--background-normal) !important;
 	--front-color: var(--theme--form--field--input--foreground) !important;
-	--border-color: var(--border-normal) !important;
+	--border-color: var(--theme--form--field--input--border-color) !important;
 }
 
 .codex-editor .ce-toolbar__plus,
@@ -48,7 +48,7 @@
 
 .codex-editor .ce-popover {
 	background: var(--theme--background);
-	border-color: var(--border-normal);
+	border-color: var(--theme--form--field--input--border-color);
 	border-width: var(--theme--border-width);
 	border-radius: var(--theme--border-radius);
 }
@@ -87,7 +87,7 @@
 
 .codex-editor .ce-popover-item-icon {
 	background: var(--theme--background);
-	border: var(--theme--border-width) solid var(--border-normal);
+	border: var(--theme--border-width) solid var(--theme--form--field--input--border-color);
 	box-shadow: none;
 }
 
@@ -100,7 +100,7 @@
 }
 
 .codex-editor .ce-popover__items:not(:first-child) {
-	border-top: var(--theme--border-width) solid var(--border-normal);
+	border-top: var(--theme--border-width) solid var(--theme--form--field--input--border-color);
 	padding-top: 8px;
 }
 
@@ -110,7 +110,7 @@
 }
 
 .codex-editor .image-tool--loading .image-tool__image {
-	border-color: var(--border-normal);
+	border-color: var(--theme--form--field--input--border-color);
 }
 
 .codex-editor .ce-inline-toolbar__toggler-and-button-wrapper {
@@ -119,7 +119,7 @@
 
 .codex-editor .ce-inline-toolbar__dropdown {
 	margin: 0;
-	border-color: var(--border-normal);
+	border-color: var(--theme--form--field--input--border-color);
 }
 
 .codex-editor .ce-inline-tool {
@@ -167,7 +167,7 @@
 .codex-editor .ce-inline-toolbar,
 .codex-editor .ce-settings {
 	background: var(--background-subdued);
-	border-color: var(--border-normal);
+	border-color: var(--theme--form--field--input--border-color);
 	border-width: var(--theme--border-width);
 	border-radius: var(--theme--border-radius);
 }
@@ -219,25 +219,25 @@
 	color: var(--theme--form--field--input--foreground);
 	font-size: inherit;
 	background-color: var(--theme--background);
-	border: var(--theme--border-width) solid var(--border-normal);
+	border: var(--theme--border-width) solid var(--theme--form--field--input--border-color);
 	border-radius: var(--theme--border-radius);
 	box-shadow: unset;
 }
 
 .codex-editor .cdx-input:hover,
 .codex-editor .ce-code__textarea:hover {
-	border-color: var(--border-normal-alt);
+	border-color: var(--theme--form--field--input--border-color-hover);
 }
 
 .codex-editor .cdx-input:focus,
 .codex-editor .ce-code__textarea:focus {
-	border-color: var(--theme--primary);
+	border-color: var(--theme--form--field--input--border-color-focus);
 }
 
 .codex-editor .ce-inline-tool-input {
 	color: var(--theme--primary);
 	background: var(--background-normal);
-	border-top-color: var(--border-normal);
+	border-top-color: var(--theme--form--field--input--border-color);
 }
 
 /* Buttons */
@@ -265,7 +265,7 @@
 .codex-editor .cdx-personality {
 	color: var(--theme--form--field--input--foreground);
 	background: var(--background-normal);
-	border-color: var(--border-normal);
+	border-color: var(--theme--form--field--input--border-color);
 	box-shadow: unset;
 }
 
@@ -291,7 +291,7 @@
 .codex-editor .image-tool {
 	--bg-color: var(--background-normal-alt);
 	--front-color: var(--theme--primary);
-	--border-color: var(--border-normal);
+	--border-color: var(--theme--form--field--input--border-color);
 }
 
 /* Personality */
@@ -315,7 +315,7 @@
 
 .codex-editor .cdx-checklist__item-checkbox {
 	background: transparent;
-	border-color: var(--border-normal);
+	border-color: var(--theme--form--field--input--border-color);
 	border-width: var(--theme--border-width);
 	border-radius: 4px;
 }
@@ -355,7 +355,7 @@
 /* Attaches */
 
 .codex-editor .cdx-attaches--with-file {
-	border: var(--theme--border-width) solid var(--border-normal);
+	border: var(--theme--border-width) solid var(--theme--form--field--input--border-color);
 }
 
 .codex-editor .cdx-attaches--with-file .cdx-attaches__file-icon {
@@ -379,7 +379,7 @@
 
 .codex-editor .cdx-attaches--with-file .cdx-attaches__download-button {
 	background: var(--background-subdued);
-	border: var(--theme--border-width) solid var(--border-normal);
+	border: var(--theme--border-width) solid var(--theme--form--field--input--border-color);
 }
 
 .codex-editor .cdx-attaches--with-file .cdx-attaches__download-button:hover {
@@ -408,7 +408,7 @@
 
 .codex-editor .tc-wrap {
 	--color-background: var(--v-list-item-background-color-active);
-	--color-border: var(--border-normal);
+	--color-border: var(--theme--form--field--input--border-color);
 	--color-background-hover: var(--v-list-item-background-color-hover);
 }
 
@@ -577,7 +577,7 @@
 	font-size: 18px;
 	font-style: italic;
 	line-height: 34px;
-	border-left: 2px dashed var(--border-normal);
+	border-left: 2px dashed var(--theme--form--field--input--border-color);
 }
 
 .codex-editor .ce-block video,
@@ -608,12 +608,12 @@
 
 .codex-editor .ce-block table th,
 .codex-editor .ce-block table td {
-	border: 1px solid var(--border-normal);
+	border: 1px solid var(--theme--form--field--input--border-color);
 }
 
 .codex-editor .ce-block .tc-table__wrap,
 .codex-editor .ce-block .tc-table__cell {
-	border-color: var(--border-normal);
+	border-color: var(--theme--form--field--input--border-color);
 }
 
 .codex-editor .ce-block figure {
