--- a/app/src/styles/lib/_emoji-picker.scss
+++ b/app/src/styles/lib/_emoji-picker.scss
@@ -6,12 +6,12 @@
 		--dark-text-color: var(--theme--foreground);
 		--secondary-text-color: var(--theme--foreground-accent);
 		--dark-secondary-text-color: var(--theme--foreground-accent);
-		--dark-border-color: var(--border-normal);
+		--dark-border-color: var(--theme--form--field--input--border-color);
 		--dark-background-color: var(--background-subdued);
 
 		box-shadow: var(--card-shadow);
 		border-radius: var(--theme--border-radius);
-		border: var(--theme--border-width) solid var(--border-normal);
+		border: var(--theme--border-width) solid var(--theme--form--field--input--border-color);
 		background-color: var(--theme--background);
 	}
 
@@ -27,17 +27,17 @@
 
 		input.emoji-picker__search {
 			border-radius: var(--theme--border-radius);
-			border: var(--theme--border-width) solid var(--border-normal);
+			border: var(--theme--border-width) solid var(--theme--form--field--input--border-color);
 			background-color: var(--theme--background);
 
 			height: 100%;
 
 			&:hover {
-				border-color: var(--border-normal-alt);
+				border-color: var(--theme--form--field--input--border-color-hover);
 			}
 
 			&:focus {
-				border-color: var(--theme--primary);
+				border-color: var(--theme--form--field--input--border-color-focus);
 			}
 
 			&::placeholder {
@@ -71,12 +71,12 @@
 		}
 
 		.emoji-picker__emojis {
-			border-top: 2px solid var(--border-normal);
+			border-top: 2px solid var(--theme--form--field--input--border-color);
 		}
 	}
 
 	.emoji-picker__preview {
-		border-top: 2px solid var(--border-normal);
+		border-top: 2px solid var(--theme--form--field--input--border-color);
 	}
 
 	.emoji-picker__emoji {
