--- a/app/src/interfaces/input-rich-text-html/tinymce-overrides.css
+++ b/app/src/interfaces/input-rich-text-html/tinymce-overrides.css
@@ -94,15 +94,17 @@
 	border-radius: var(--theme--border-radius);
 	transition: var(--fast) var(--transition);
 	transition-property: color, border-color;
+	box-shadow: var(--theme--form--field--input--box-shadow);
 }
 
 .wysiwyg:not(.disabled) .tox-tinymce:hover {
 	border-color: var(--theme--form--field--input--border-color-hover);
+	box-shadow: var(--theme--form--field--input--box-shadow-hover);
 }
 
 .wysiwyg:not(.disabled) .tox-tinymce.focus {
 	border-color: var(--theme--form--field--input--border-color-focus) !important;
-	box-shadow: 0 0 16px -8px var(--theme--primary) !important;
+	box-shadow: var(--theme--form--field--input--box-shadow-focus) !important;
 }
 
 .tox .tox-toolbar,
