--- a/app/src/styles/lib/_codemirror.scss
+++ b/app/src/styles/lib/_codemirror.scss
@@ -12,6 +12,7 @@
 	border: var(--theme--border-width) solid var(--theme--form--field--input--border-color);
 	border-radius: var(--theme--border-radius);
 	transition: all var(--fast) var(--transition);
+	box-shadow: var(--theme--form--field--input--box-shadow);
 }
 
 .disabled .CodeMirror {
@@ -25,6 +26,7 @@
 
 .CodeMirror:hover {
 	border-color: var(--theme--form--field--input--border-color-hover);
+	box-shadow: var(--theme--form--field--input--box-shadow-hover);
 }
 
 .disabled .CodeMirror:hover {
@@ -33,7 +35,7 @@
 
 .CodeMirror.CodeMirror-focused {
 	border-color: var(--theme--form--field--input--border-color-focus);
-	box-shadow: 0 0 16px -8px var(--theme--primary);
+	box-shadow: var(--theme--form--field--input--box-shadow-focus);
 }
 
 /* PADDING */
