Use theme border subdued

--- a/app/src/styles/lib/_fullcalendar.scss
+++ b/app/src/styles/lib/_fullcalendar.scss
@@ -106,8 +106,8 @@
 			font-weight: inherit !important;
 			font-size: inherit !important;
 			background-color: var(--theme--background);
-			border-top: 2px solid var(--border-subdued);
-			border-bottom: 2px solid var(--border-subdued);
+			border-top: 2px solid var(--theme--border-subdued);
+			border-bottom: 2px solid var(--theme--border-subdued);
 			box-shadow: 0 0 0 2px var(--theme--background);
 		}
 	}
