--- a/app/src/styles/lib/_flatpickr.scss
+++ b/app/src/styles/lib/_flatpickr.scss
@@ -288,7 +288,7 @@ span.flatpickr-weekday {
 .flatpickr-calendar.hasTime .flatpickr-time {
 	height: 43px;
 	margin-top: 8px;
-	border-top: var(--theme--border-width) solid var(--theme--border-subdued);
+	border-top: var(--theme--border-width) solid var(--theme--border-color-subdued);
 }
 
 .flatpickr-calendar.noCalendar .flatpickr-time {
@@ -324,7 +324,7 @@ span.flatpickr-weekday {
 	width: 100%;
 	padding: 8px 0;
 	color: var(--theme--primary);
-	border-top: var(--theme--border-width) solid var(--theme--border-subdued);
+	border-top: var(--theme--border-width) solid var(--theme--border-color-subdued);
 	transition: background-color var(--fast) var(--transition);
 }
 
