--- a/app/src/styles/lib/_emoji-picker.scss
+++ b/app/src/styles/lib/_emoji-picker.scss
@@ -81,7 +81,7 @@
 
 	.emoji-picker__emoji {
 		&:hover {
-			background-color: var(--background-normal);
+			background-color: var(--theme--background-accent);
 			border-radius: var(--theme--border-radius);
 		}
 	}
