--- a/app/src/styles/lib/_mapbox.scss
+++ b/app/src/styles/lib/_mapbox.scss
@@ -26,7 +26,7 @@
 		}
 
 		&:hover {
-			background: var(--background-normal) !important;
+			background: var(--theme--background-accent) !important;
 		}
 
 		&.active {
