--- a/app/src/styles/lib/_fullcalendar.scss
+++ b/app/src/styles/lib/_fullcalendar.scss
@@ -11,7 +11,7 @@
 	--fc-button-text-color: var(--theme--foreground-subdued);
 	--fc-border-color: var(--theme--form--field--input--border-color);
 	--fc-highlight-color: var(--theme--primary-background);
-	--fc-neutral-bg-color: var(--background-normal);
+	--fc-neutral-bg-color: var(--theme--background-accent);
 	--fc-list-event-hover-bg-color: var(--background-subdued);
 
 	.fc-more-popover {
