--- a/app/src/styles/_base.scss
+++ b/app/src/styles/_base.scss
@@ -112,7 +112,7 @@ code {
 }
 
 ::selection {
-	background: var(--background-normal-alt);
+	background: var(--theme--background-accent);
 }
 
 dl > div {
