--- a/app/src/interfaces/input-block-editor/editorjs-overrides.css
+++ b/app/src/interfaces/input-block-editor/editorjs-overrides.css
@@ -13,7 +13,7 @@
 
 .codex-editor .ce-toolbar__plus:hover,
 .codex-editor .ce-toolbar__settings-btn:hover {
-	background-color: var(--background-normal-alt);
+	background-color: var(--theme--background-accent);
 }
 
 .codex-editor .ce-toolbar__plus svg,
@@ -36,7 +36,7 @@
 }
 
 .codex-editor .cdx-loader::before {
-	border: 3px solid var(--background-normal-alt);
+	border: 3px solid var(--theme--background-accent);
 	border-left-color: var(--theme--primary);
 }
 
@@ -156,7 +156,7 @@
 /* Button balloons */
 
 .codex-editor .ce-toolbox__button.ce-toolbox__button--active {
-	background: var(--background-normal-alt);
+	background: var(--theme--background-accent);
 }
 
 .codex-editor .ce-toolbox__button.ce-toolbox__button--active svg {
@@ -177,7 +177,7 @@
 .codex-editor .ce-inline-toolbar__dropdown:hover,
 .codex-editor .ce-inline-toolbar .ce-inline-tool:hover,
 .codex-editor .ce-settings .ce-settings__button:hover {
-	background: var(--background-normal-alt);
+	background: var(--theme--background-accent);
 }
 
 .codex-editor .ce-conversion-toolbar .ce-conversion-tool--focused:not(:hover) {
@@ -289,7 +289,7 @@
 /* Image Tool */
 
 .codex-editor .image-tool {
-	--bg-color: var(--background-normal-alt);
+	--bg-color: var(--theme--background-accent);
 	--front-color: var(--theme--primary);
 	--border-color: var(--theme--form--field--input--border-color);
 }
@@ -360,7 +360,7 @@
 
 .codex-editor .cdx-attaches--with-file .cdx-attaches__file-icon {
 	padding: 5px;
-	background: var(--background-normal-alt);
+	background: var(--theme--background-accent);
 	border-radius: var(--theme--border-radius);
 	margin-right: 12px;
 }
@@ -415,7 +415,7 @@
 .codex-editor .tc-popover {
 	--color-background: var(--theme--background);
 	--color-border: var(--theme--background);
-	--color-background-hover: var(--background-normal-alt);
+	--color-background-hover: var(--theme--background-accent);
 }
 
 .tc-cell--selected,
@@ -431,7 +431,7 @@
 }
 
 .tc-toolbox__toggler:hover {
-	fill: var(--background-normal-alt) !important;
+	fill: var(--theme--background-accent) !important;
 }
 
 .codex-editor .tc-toolbox__toggler svg rect:first-child {
@@ -442,7 +442,7 @@
 
 .codex-editor .tc-toolbox__toggler:hover svg rect:first-child {
 	/* This is very ugly, but there no other way to set background of the element */
-	fill: var(--background-normal-alt) !important;
+	fill: var(--theme--background-accent) !important;
 }
 
 .tc-add-column:hover,
@@ -569,7 +569,7 @@
 	overflow: auto;
 	font-size: 18px;
 	line-height: 24px;
-	background-color: var(--background-normal-alt);
+	background-color: var(--theme--background-accent);
 	border-radius: 4px;
 }
 
