--- a/app/src/styles/lib/_mapbox.scss
+++ b/app/src/styles/lib/_mapbox.scss
@@ -158,7 +158,7 @@
 .mapboxgl-ctrl-geocoder .suggestions > .active > a,
 .mapboxgl-ctrl-geocoder .suggestions > li > a:hover {
 	color: var(--v-list-item-color-active);
-	background-color: var(--background-normal-alt);
+	background-color: var(--theme--background-accent);
 }
 
 .mapboxgl-ctrl-geocoder--button {
