--- a/app/src/interfaces/input-block-editor/editorjs-overrides.css
+++ b/app/src/interfaces/input-block-editor/editorjs-overrides.css
@@ -184,15 +184,21 @@
 	--webkit-box-shadow: unset;
 
 	color: var(--theme--primary);
-	background-color: var(--v-list-item-background-color-hover) !important;
+	background-color: var(
+		--v-list-item-background-color-hover,
+		var(--v-list-background-color-hover, var(--theme--background))
+	) !important;
 	box-shadow: unset;
 }
 
 .codex-editor .ce-conversion-tool:hover {
 	--webkit-box-shadow: unset;
 
-	color: var(--v-list-item-color-hover);
-	background-color: var(--v-list-item-background-color-hover) !important;
+	color: var(--v-list-item-color-hover, var(--v-list-color-hover, var(--theme--foreground)));
+	background-color: var(
+		--v-list-item-background-color-hover,
+		var(--v-list-background-color-hover, var(--theme--background))
+	) !important;
 	box-shadow: unset;
 }
 
@@ -398,18 +404,24 @@
 
 .codex-editor .ce-block .inline-code {
 	padding: 4px;
-	color: var(--v-chip-background-color);
+	color: var(--v-chip-background-color, var(--theme--background));
 	font-family: monospace;
-	background-color: var(--v-chip-color);
+	background-color: var(--v-chip-color, var(--theme--foreground));
 	border-radius: 4px;
 }
 
 /* tc module */
 
 .codex-editor .tc-wrap {
-	--color-background: var(--v-list-item-background-color-active);
+	--color-background: var(
+		--v-list-item-background-color-active,
+		var(--v-list-background-color-active, var(--theme--background))
+	);
 	--color-border: var(--theme--form--field--input--border-color);
-	--color-background-hover: var(--v-list-item-background-color-hover);
+	--color-background-hover: var(
+		--v-list-item-background-color-hover,
+		var(--v-list-background-color-hover, var(--theme--background))
+	);
 }
 
 .codex-editor .tc-popover {
@@ -451,7 +463,10 @@
 }
 
 .tc-add-row:hover::before {
-	background-color: var(--v-list-item-background-color-hover);
+	background-color: var(
+		--v-list-item-background-color-hover,
+		var(--v-list-background-color-hover, var(--theme--background))
+	);
 }
 
 .interface.subdued .codex-editor {
