Change conditional to check for empty string

--- a/api/src/services/mail/templates/base.liquid
+++ b/api/src/services/mail/templates/base.liquid
@@ -376,7 +376,7 @@
                         color: #171717;
                       "
                     >
-                      Sent by the team at {{ projectName }}{% if projectUrl %} —
+                      Sent by the team at {{ projectName }}{% if projectUrl != '' %} —
                       <a
                         style="
                           -webkit-text-size-adjust: 100%;
