--- a/app/src/styles/lib/_emoji-picker.scss
+++ b/app/src/styles/lib/_emoji-picker.scss
@@ -7,7 +7,7 @@
 		--secondary-text-color: var(--theme--foreground-accent);
 		--dark-secondary-text-color: var(--theme--foreground-accent);
 		--dark-border-color: var(--theme--form--field--input--border-color);
-		--dark-background-color: var(--background-subdued);
+		--dark-background-color: var(--theme--form--field--input--background-subdued);
 
 		box-shadow: var(--card-shadow);
 		border-radius: var(--theme--border-radius);
