--- a/app/src/styles/lib/_fullcalendar.scss
+++ b/app/src/styles/lib/_fullcalendar.scss
@@ -12,7 +12,7 @@
 	--fc-border-color: var(--theme--form--field--input--border-color);
 	--fc-highlight-color: var(--theme--primary-background);
 	--fc-neutral-bg-color: var(--theme--background);
-	--fc-list-event-hover-bg-color: var(--background-subdued);
+	--fc-list-event-hover-bg-color: var(--theme--form--field--input--background-subdued);
 
 	.fc-more-popover {
 		max-width: var(--form-column-width);
@@ -25,7 +25,7 @@
 	}
 
 	.fc-list-empty {
-		background-color: var(--background-subdued) !important;
+		background-color: var(--theme--background-subdued) !important;
 	}
 
 	.fc-daygrid-more-link {
