--- a/app/src/interfaces/input-rich-text-html/tinymce-overrides.css
+++ b/app/src/interfaces/input-rich-text-html/tinymce-overrides.css
@@ -234,7 +234,7 @@ body.dark .tox .tox-toolbar__overflow {
 	font-size: 14px;
 	font-family: var(--theme--font-family-sans-serif);
 	background-color: var(--theme--background-page);
-	border: 2px solid var(--theme--form--field--input--border-color);
+	border: var(--theme--border-width) solid var(--theme--form--field--input--border-color);
 	border-radius: var(--theme--border-radius);
 	transition: var(--fast) var(--transition);
 }
@@ -257,7 +257,7 @@ body.dark .tox .tox-toolbar__overflow {
 	color: var(--theme--form--field--input--foreground);
 	font-family: var(--theme--font-family-sans-serif);
 	background-color: var(--theme--form--field--input--background-subdued);
-	border: 2px solid var(--theme--form--field--input--border-color);
+	border: var(--theme--border-width) solid var(--theme--form--field--input--border-color);
 	border-radius: var(--theme--border-radius);
 }
 
@@ -302,7 +302,7 @@ body.dark .tox .tox-toolbar__overflow {
 	font-family: var(--theme--font-family-sans-serif);
 	line-height: 19px;
 	background-color: var(--theme--primary);
-	border: 2px solid var(--theme--primary);
+	border: var(--theme--border-width) solid var(--theme--primary);
 	border: none;
 	border-color: var(--theme--primary);
 	border-radius: var(--theme--border-radius);
