Deprecate card-face-color

--- a/app/src/styles/lib/_flatpickr.scss
+++ b/app/src/styles/lib/_flatpickr.scss
@@ -8,7 +8,7 @@
 	width: auto;
 	overflow: hidden;
 	font-family: var(--v-input-font-family);
-	background: var(--card-face-color);
+	background: var(--theme--form--field--input--background);
 	border-radius: var(--theme--border-radius);
 	box-shadow: none;
 }
