--- a/app/src/styles/lib/_emoji-picker.scss
+++ b/app/src/styles/lib/_emoji-picker.scss
@@ -9,10 +9,10 @@
 		--dark-border-color: var(--theme--form--field--input--border-color);
 		--dark-background-color: var(--theme--form--field--input--background-subdued);
 
-		box-shadow: var(--card-shadow);
-		border-radius: var(--theme--border-radius);
+		background: var(--theme--popover--menu--background);
+		border-radius: var(--theme--popover--menu--border-radius);
+		box-shadow: var(--theme--popover--menu--box-shadow);
 		border: var(--theme--border-width) solid var(--theme--form--field--input--border-color);
-		background-color: var(--theme--background);
 	}
 
 	.emoji-picker__search-container {
