--- a/app/src/styles/mixins/type-styles.scss
+++ b/app/src/styles/mixins/type-styles.scss
@@ -1,7 +1,7 @@
 @mixin type-title {
 	color: var(--theme--foreground-accent);
-	font-weight: 700;
 	font-size: 24px;
+	font-weight: var(--theme--fonts--display--font-weight);
 	font-family: var(--theme--fonts--display--font-family);
 	font-style: normal;
 	line-height: 34px;
