Use empty `alt` to prevent broken img fallback

--- a/api/src/services/mail/templates/base.liquid
+++ b/api/src/services/mail/templates/base.liquid
@@ -315,6 +315,7 @@
                           <img
                             id="logo"
                             src="{{ projectLogo }}"
+                            alt=""
                             width="22"
                             height="22"
                             border="0"
