--- a/app/src/interfaces/input-block-editor/editorjs-overrides.css
+++ b/app/src/interfaces/input-block-editor/editorjs-overrides.css
@@ -93,16 +93,12 @@
 
 .codex-editor .ce-popover-item__icon {
 	background: transparent;
+	box-shadow: unset;
+	border: 1px solid var(--theme--foreground-subdued);
 }
 
 .codex-editor .ce-popover-item--active .ce-popover-item__icon {
 	color: var(--theme--primary);
-}
-
-.codex-editor .ce-popover-item--active .ce-popover-item__icon,
-.codex-editor .ce-popover-item:hover .ce-popover-item__icon,
-.codex-editor .ce-popover-item--confirmation .ce-popover-item__icon {
-	box-shadow: 0 0 0 1px var(--color-border-icon);
 }
 
 .codex-editor .ce-inline-toolbar__toggler-and-button-wrapper {
@@ -139,7 +135,7 @@
 .ct__content {
 	background-color: var(--background-inverted);
 	color: var(--foreground-inverted);
-	border-radius: 4px;
+	border-radius: var(--theme--border-radius);
 	padding: 8px;
 	font-size: inherit;
 }
@@ -186,6 +182,8 @@
 }
 
 .codex-editor .ce-conversion-tool__icon {
+	border: 1px solid var(--theme--foreground-subdued);
+	box-shadow: unset;
 	background: transparent;
 }
 
